[gd_scene load_steps=7 format=3 uid="uid://c35ug12xrl8p3"]

[ext_resource type="Script" path="res://scenes/general/player.gd" id="1_2yci0"]
[ext_resource type="PackedScene" path="res://scenes/tools/avian_target.tscn" id="2_fw8d5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i4mqd"]
radius = 0.25
height = 1.5

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_og5qh"]
length = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xpto2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ab24k"]
size = Vector3(0.25, 1.8, 0.25)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2yci0")

[node name="AvianTarget" parent="." instance=ExtResource("2_fw8d5")]

[node name="BodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CapsuleShape3D_i4mqd")

[node name="StepCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0)
shape = SubResource("SeparationRayShape3D_og5qh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_xpto2")

[node name="Gimbal" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Gimbal"]
cull_mask = 1048573
current = true

[node name="InteractCast" type="RayCast3D" parent="Gimbal/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)
collision_mask = 9
collide_with_areas = true

[node name="WallrunLeftCheck" type="RayCast3D" parent="Gimbal"]
target_position = Vector3(-1, 0, 0)

[node name="WallrunRightCheck" type="RayCast3D" parent="Gimbal"]
target_position = Vector3(1, 0, 0)

[node name="ClimbCheck" type="RayCast3D" parent="Gimbal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
target_position = Vector3(0, -1.3, 0)

[node name="SpaceCheck" type="Area3D" parent="Gimbal/ClimbCheck"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gimbal/ClimbCheck/SpaceCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_ab24k")

[node name="WallrunTracker" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 0)

[connection signal="damaged" from="AvianTarget" to="." method="damage"]
